<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/mandelbox_preferences" >

   <ListPreference
        android:defaultValue="-1.732051"
        android:entries="@array/scale_strings"
        android:entryValues="@array/scale_values"
        android:key="scale"
        android:summary="@string/scale_summary"
        android:title="@string/scale" />
     <ListPreference
        android:defaultValue="2048"
        android:entries="@array/dim_strings"
        android:entryValues="@array/dim_values"
        android:key="dim"
        android:summary="@string/dim_summary"
        android:title="@string/dim" />
    <ListPreference
        android:defaultValue="7200"
        android:entries="@array/update_frequency_strings"
        android:entryValues="@array/update_frequency_values"
        android:key="update_frequency"
        android:summary="@string/update_frequency_summary"
        android:title="@string/update_summary" />

    <Preference android:key="status"/>
</PreferenceScreen>